MavinsBarberBooking/wwwroot/css/site.css
/*Pappins Font*/
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

html {
    font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
  position: relative;
  min-height: 100%;
}

body {
    overflow-x: hidden !important;
    background: linear-gradient(180deg, #e8e8e8 0%, #a0a0a0 45%, #222222 100%);
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100vh;
    font-family: 'Poppins', sans-serif;
}



/* reveal animation  */
.reveal-element {
    opacity: 0;
    transform: translateY(40px);
    transition: all 0.8s ease-out;
}

    .reveal-element.active {
        opacity: 1;
        transform: translateY(0);
    }






/* --- GLOBAL LOADER STYLES --- */
.global-loader {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.2); /* Dark background */
    /* 5px Blur Effect */
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    z-index: 99999; /* Keeps it above navbars and everything else */
    /* Centering magic */
    display: flex;
    align-items: center;
    justify-content: center;
}

    /* Helper class for the JavaScript */
    .global-loader.d-none {
        display: none !important;
    }

.spinner-container {
    text-align: center;
}

.loading-icon {
    font-size: 3.5rem;
    color: #ffffff;
}

.loading-text {
    letter-spacing: 4px;
    font-size: 0.85rem;
}
/* --- END GLOBAL LOADER STYLES --- */

